--- a/styles/_jumbo.scss
+++ b/styles/_jumbo.scss
@@ -2,6 +2,10 @@
   margin-top: 11%;
 }
 
+.filter-shadow {
+  filter: drop-shadow(0px 12px 42px 1px rgba(0, 0, 0, 1.1));
+}
+
 .title {
   font-family: "LeagueGothic";
   text-transform: capitalize;
@@ -37,10 +41,8 @@ input {
   left: 20%;
   z-index: -2;
   border-radius: 5px;
+  box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.25);
   position: absolute;
-  box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -61,9 +63,6 @@ input {
   background: linear-gradient(231.07deg, #7d52fc 30.24%, #4acaf9 84.45%);
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   transform: rotate(14.45deg);
-  -webkit-box-shadow: 0px 12px 42px 0px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 12px 42px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 12px 42px 0px rgba(0, 0, 0, 0.25);
   z-index: -4;
 }
 
@@ -75,9 +74,6 @@ input {
   height: 12rem;
   clip-path: circle(50% at 50% 50%);
   background: linear-gradient(52.27deg, #2e585e 14.81%, #00f0ff 86.16%);
-  box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
   z-index: -5;
 }
 
@@ -88,9 +84,6 @@ input {
   width: 12rem;
   height: 12rem;
   background: linear-gradient(52.27deg, #2e585e 14.81%, #f9e84a 86.16%);
-  box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 12px 42px 1px rgba(0, 0, 0, 0.15);
   clip-path: circle(50% at 50% 50%);
   z-index: -5;
 }
