--- a/styles/_meetTheTeam.scss
+++ b/styles/_meetTheTeam.scss
@@ -22,19 +22,23 @@ h2 {
     justify-content: space-evenly;
     .pink__border {
       margin-bottom: 10rem;
+      margin-left: 10rem;
       div {
         border-color: #a82282;
         box-shadow: 0px 12px 42px 1px rgba(168, 34, 130, 0.4);
       }
     }
     .green__border {
+      margin-top: 12%;
+      margin-left: 13rem;
       div {
         border-color: #38af43;
         box-shadow: 0px 12px 42px 1px rgba(56, 175, 67, 0.4);
       }
     }
     .dark__yellow__border {
-      margin-bottom: 15rem;
+      margin-bottom: 20rem;
+      margin-left: 15%;
       div {
         border-color: rgba(255, 145, 44, 0.87);
         box-shadow: 0px 12px 42px 1px rgba(255, 145, 44, 0.4);
@@ -56,14 +60,14 @@ h2 {
     position: relative;
     .blue__border {
       position: absolute;
-      bottom: 55%;
+      bottom: 50%;
       div {
         border-color: #5296fc;
         box-shadow: 0px 12px 42px 1px rgba(82, 150, 252, 0.4);
       }
     }
     .yellow__border {
-      margin: 5rem 0 0 15rem;
+      margin: 12rem 0 0 25rem;
       div {
         border-color: #eefc52;
         box-shadow: 0px 12px 42px 1px rgba(238, 252, 82, 0.4);
@@ -71,7 +75,7 @@ h2 {
     }
 
     .orange__border {
-      margin: 0 15rem 10rem 0;
+      margin: 0 13rem 8rem 0;
       div {
         border-color: #e46942;
         box-shadow: 0px 12px 42px 1px rgba(228, 105, 66, 0.4);
